Test_vorlagen/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app  # Selector to identify pods with this label
  ports:
    - protocol: TCP
      port: 80  # The port that the service will expose
      targetPort: 8080  # The port on the container
  type: ClusterIP
