Test_vorlagen/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-route
  Labels:
   app:
spec:
  host: www.example.com  # The URL where the service will be exposed
  to:
    kind: Service
    name: my-service  # zu welchem service der route zeigen soll
